[445371] Add two SWTbot suites, each running half of the complete one
The new suites are only executed when activating the "swtbot-part1"
and/or "swtbot-part2" profiles. The complete suite is still executed
when using the plain "swtbot" profile, so it should have zero impact on
existing CI jobs.

Bug: 445371
Change-Id: I1e88378364219345c666ab35832c8fb9b84845d6
Signed-off-by: Pierre-Charles David <pierre-charles.david@obeo.fr>